--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
+# local prisma sqlite
+prisma/dev.db
+prisma/dev.db-journal
+
+# vercel
+.vercel
+
