--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.3",
     "next-auth": "^4.24.13",
-    "prisma": "^7.2.0",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
